test/files/pos/t6245/Base.java
package t1;

public class Base {
  protected Vis inner;
}
