test/files/neg/t11575b/Cover.java
public class Cover extends Base {
    int[] counts;
}
